Display PianoView in the main ControlViewController

--- a/TouchBarPiano/Base.lproj/Main.storyboard
+++ b/TouchBarPiano/Base.lproj/Main.storyboard
@@ -685,7 +685,22 @@
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Fh-S8-KoT" customClass="SolidColorView" customModule="TouchBarPiano" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <subviews>
+                                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="86c-qb-FVJ" customClass="PianoView" customModule="TouchBarPiano" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="154" width="440" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                    </customView>
+                                </subviews>
+                            </customView>
+                        </subviews>
                     </view>
+                    <connections>
+                        <outlet property="pianoView" destination="86c-qb-FVJ" id="0m9-ew-Nkx"/>
+                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
